syntax = "proto3";

package proto;

option go_package = "github.com/PrinceMaren1/Homework03-Tr-lsstemning";

message ClientMessage{
    string clientId = 1;
    // This needs to be a maximum of 128 Characters
    string message = 2;
    int64 time = 3;
}

message ServerBroadcast{
    string message = 1;
    int64 time = 2;
}

service ServerConnection {
    rpc SendMessages(stream ClientMessage) returns (stream ServerBroadcast);
}




